docs/ocp_ndb/k8s/routes.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-path-a
spec:
  host: flower.apps.hackathon.hackathon8.ntnxlab.local
  path: "/"   
  to:
    kind: Service
    name: react-cluster-ip-service
    port: 
      number: 3000

---

  apiVersion: v1
  kind: Route
  metadata:
    name: route-path-b
  spec:
    host: flower.apps.hackathon.hackathon8.ntnxlab.local
    path: "/admin"   
    to:
      kind: Service
      name: django-cluster-ip-service
      port: 
        number: 8000

---

apiVersion: v1
kind: Route
metadata:
  name: route-path-c
spec:
  host: flower.apps.hackathon.hackathon8.ntnxlab.local
  path: "/api"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: v1
kind: Route
metadata:
  name: route-path-d
spec:
  host: flower.apps.hackathon.hackathon8.ntnxlab.local
  path: "/static/admin/"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: v1
kind: Route
metadata:
  name: route-path-e
spec:
  host: flower.apps.hackathon.hackathon8.ntnxlab.local
  path: "/static/rest_framework/"   
  to:
    kind: Service
    name: django-cluster-ip-service
    port: 
      number: 8000

---

apiVersion: v1
kind: Route
metadata:
  name: route-path-f
spec:
  host: flower.apps.hackathon.hackathon8.ntnxlab.local
  path: "/static/"   
  to:
    kind: Service
    name: react-cluster-ip-service
    port: 
      number: 3000

---

apiVersion: v1
kind: Route
metadata:
  name: route-path-g
spec:
  host: flower.apps.hackathon.hackathon8.ntnxlab.local
  path: "/media/"   
  to:
    kind: Service
    name: react-cluster-ip-service
    port: 
      number: 3000
